--- a/PP_MHP.tex
+++ b/PP_MHP.tex
@@ -90,7 +90,7 @@ to the blockchain. This transaction represents the most up-to-date distribution 
 
 \section{Background}
 In this section, we provide an overview on the background and the
-notations used throughout the paper.
+notations used throughout the paper. UTXO model.
 \subsection{UTXO model}
 
 The IEEEtran class file is used to format your paper and style the text. All margins, 
