--- a/PP_MHP.tex
+++ b/PP_MHP.tex
@@ -91,7 +91,7 @@ to the blockchain. This transaction represents the most up-to-date distribution 
 
 \section{Background}
 In this section, we provide an overview on the background and the
-notations used throughout the paper. UTXO model.
+notations used throughout the paper.
 \subsection{UTXO model}
 
 Transaction output is the fundamental component of Bitcoin transaction,which is an indivisible Bitcoin currency
